2005-06-06  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/cruncher: Convert to the new user-space POSIX support.

	* include/nucleus/asm-*/atomic.h: Add cpu_relax() in user-space
	context.

005-06-05  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* testsuite/latency/latency.c (latency): Reduce warmup time again,
	to 1 second. Make overrun accounting in latency thread, to avoid
	losing overruns.

2005-06-04  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib: Use constructor section to connect to the
	in-kernel skin.

2005-06-04  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* testsuite/latency/latency.c (latency): Reduce warmup time to 2
	seconds.

	* testsuite/latency/latency.c: Warm-up times, for better accuracy,
	especially on low-end machines. Compute extrema latencies in
	latency thread, to avoid losing some of them.

	* skins/posix/thread.c (pthread_detach, pthread_join): Use
	xnthread_t flags spare bit to signal a detached joinee instead of
	XNBREAK, XNBREAK is reserved for signals.
	(thread_delete_hook): Avoid useless call to xnpod_schedule.

2005-06-04  Philippe Gerum  <rpm@xenomai.org>

	* scripts/rtai-config.in: Provide for --posix-* flags.

	* include/nucleus/fusion.h: Refactor the fusion API namespace, so
	that no conflict/confusion would arise with the incoming POSIX
	support in user-space.

	* skin/posix/lib: Start user-space POSIX support, provided as a
	shadow layer ontop of the native NPTL/LinuxThreads routines.

2005-06-03  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_start_thread), nucleus/shadow.c
	(xnshadow_start): Improve init code sharing.

	* skins/posix/thread_attr.c: Set default policy to SCHED_FIFO.

2005-06-04  Philippe Gerum  <rpm@xenomai.org>

 	* RELEASE: fusion-0.7.5

2005-05-30  Philippe Gerum  <rpm@xenomai.org>

	* skins/rtai/lib/task.c (rt_task_shadow): Add a service turning
	the calling Linux task into a native RTAI task.

2005-05-29  Philippe Gerum  <rpm@xenomai.org>
